k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cars-dealership
  labels:
    app: cars-dealership
