k8s/microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice
  namespace: cars-dealership
  labels:
    app: microservice
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: microservice
